# fastgrep

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  cleanup.sh  todos.org
3p/: build_all.sh  get_build_options.sh
benchmark/: CMakeLists.txt  all_tests.cpp  grep_bench.cpp  log_bench.cpp
commands/: CMakeLists.txt  fast-grep-new.cpp  fast-grep.cpp  fastgrep.cpp  fgrep.cpp  line_count.cpp  linestats.cpp  message_filter.cpp  scribe_parser.cpp  sgrep.cpp  simplegrep.cpp  verify.sh
notes/: fastgrep.html  fastgrep.md  how_to_write_fast_scribe_parser.org  notes.org
others/emacs/: counsel.el
src/: algorithms.hpp  body_parser.hpp  colors.hpp  constants.hpp  constraints.hpp  fast-grep-params.hpp  fast-grep.hpp  grep.hpp  header_parser.hpp  line_parser.hpp  memmap.hpp  message_filter.hpp  output.hpp  params.hpp  parser.hpp  parser_array.hpp  producer.hpp  regex_matchers.hpp  scribe.hpp  simple_policy.hpp  stream.hpp  utils.hpp  wordcount.hpp
unittests/: CMakeLists.txt  body.received.json  console.cpp  experiments.cpp  parser.cpp  scribe.cpp  simple_policy.cpp  stream_policy.cpp  test.cpp  test_apis.cpp  test_read.cpp
